# webmail

./: .env.example  .env.test  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  database_schema.sql
.github/workflows/: code-checking.yml  release.yml  testing.yml
frontend/: Cargo.toml  index.html  login.html
frontend/src/: lib.rs  main.rs
src/: auth.rs  lib.rs  main.rs
