[package]
name = "webmail"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
lettre = { version = "0.10", features = ["smtp-transport", "tokio1-native-tls", "builder"], default-features = false }
async-imap = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
actix-cors = "0.7"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }